--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Le projet de mise en place d'un jeu de serpent en Javascript.",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
